// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: activate_skill 1`] = `
{
  "description": "Activates a specialized agent skill by name (Available: 'skill1', 'skill2'). Returns the skill's instructions wrapped in \`<activated_skill>\` tags. These provide specialized guidance for the current task. Use this when you identify a task that matches a skill's description. ONLY use names exactly as they appear in the \`<available_skills>\` section.",
  "name": "Skill",
  "parametersJsonSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "skill": {
        "description": "The name of the skill to activate.",
        "enum": [
          "skill1",
          "skill2",
        ],
        "type": "string",
      },
    },
    "required": [
      "skill",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: activate_skill_empty 1`] = `
{
  "description": "Activates a specialized agent skill by name. Returns the skill's instructions wrapped in \`<activated_skill>\` tags. These provide specialized guidance for the current task. Use this when you identify a task that matches a skill's description. ONLY use names exactly as they appear in the \`<available_skills>\` section.",
  "name": "Skill",
  "parametersJsonSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "skill": {
        "description": "No skills are currently available.",
        "type": "string",
      },
    },
    "required": [
      "skill",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: activate_skill_single 1`] = `
{
  "description": "Activates a specialized agent skill by name (Available: 'skill1'). Returns the skill's instructions wrapped in \`<activated_skill>\` tags. These provide specialized guidance for the current task. Use this when you identify a task that matches a skill's description. ONLY use names exactly as they appear in the \`<available_skills>\` section.",
  "name": "Skill",
  "parametersJsonSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "skill": {
        "description": "The name of the skill to activate.",
        "enum": [
          "skill1",
        ],
        "type": "string",
      },
    },
    "required": [
      "skill",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: ask_user 1`] = `
{
  "description": "Use this tool when you need to ask the user questions during execution. This allows you to:
1. Gather user preferences or requirements
2. Clarify ambiguous instructions
3. Get decisions on implementation choices as you work
4. Offer choices to the user about what direction to take.

Usage notes:
- Users will always be able to select "Other" to provide custom text input
- Use multiSelect: true to allow multiple answers to be selected for a question
- If you recommend a specific option, make that the first option in the list and add "(Recommended)" at the end of the label

Plan mode note: In plan mode, use this tool to clarify requirements or choose between approaches BEFORE finalizing your plan. Do NOT use this tool to ask "Is my plan ready?" or "Should I proceed?" - use ExitPlanMode for plan approval. IMPORTANT: Do not reference "the plan" in your questions (e.g., "Do you have feedback about the plan?", "Does the plan look good?") because the user cannot see the plan in the UI until you call ExitPlanMode. If you need plan approval, use ExitPlanMode instead.",
  "name": "AskUserQuestion",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "annotations": {
        "additionalProperties": {
          "additionalProperties": false,
          "properties": {
            "notes": {
              "description": "Free-text notes the user added to their selection.",
              "type": "string",
            },
            "preview": {
              "description": "The preview content of the selected option, if the question used previews.",
              "type": "string",
            },
          },
          "type": "object",
        },
        "description": "Optional per-question annotations from the user (e.g., notes on preview selections). Keyed by question text.",
        "propertyNames": {
          "type": "string",
        },
        "type": "object",
      },
      "answers": {
        "additionalProperties": {
          "type": "string",
        },
        "description": "User answers collected by the permission component",
        "propertyNames": {
          "type": "string",
        },
        "type": "object",
      },
      "metadata": {
        "additionalProperties": false,
        "description": "Optional metadata for tracking and analytics purposes. Not displayed to user.",
        "properties": {
          "source": {
            "description": "Optional identifier for the source of this question (e.g., "remember" for /remember command). Used for analytics tracking.",
            "type": "string",
          },
        },
        "type": "object",
      },
      "questions": {
        "description": "Questions to ask the user (1-4 questions)",
        "items": {
          "additionalProperties": false,
          "properties": {
            "header": {
              "description": "Very short label displayed as a chip/tag (max 12 chars). Examples: "Auth method", "Library", "Approach".",
              "type": "string",
            },
            "multiSelect": {
              "default": false,
              "description": "Set to true to allow the user to select multiple options instead of just one. Use when choices are not mutually exclusive.",
              "type": "boolean",
            },
            "options": {
              "description": "The available choices for this question. Must have 2-4 options. Each option should be a distinct, mutually exclusive choice (unless multiSelect is enabled). There should be no 'Other' option, that will be provided automatically.",
              "items": {
                "additionalProperties": false,
                "properties": {
                  "description": {
                    "description": "Explanation of what this option means or what will happen if chosen. Useful for providing context about trade-offs or implications.",
                    "type": "string",
                  },
                  "label": {
                    "description": "The display text for this option that the user will see and select. Should be concise (1-5 words) and clearly describe the choice.",
                    "type": "string",
                  },
                  "preview": {
                    "description": "Optional preview content shown in a monospace box when this option is focused. Use for ASCII mockups, code snippets, or diagrams that help users visually compare options. Supports multi-line text with newlines.",
                    "type": "string",
                  },
                },
                "required": [
                  "label",
                  "description",
                ],
                "type": "object",
              },
              "maxItems": 4,
              "minItems": 2,
              "type": "array",
            },
            "question": {
              "description": "The complete question to ask the user. Should be clear, specific, and end with a question mark. Example: "Which library should we use for date formatting?" If multiSelect is true, phrase it accordingly, e.g. "Which features do you want to enable?"",
              "type": "string",
            },
          },
          "required": [
            "question",
            "header",
            "options",
            "multiSelect",
          ],
          "type": "object",
        },
        "maxItems": 4,
        "minItems": 1,
        "type": "array",
      },
    },
    "required": [
      "questions",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: enter_plan_mode 1`] = `
{
  "description": "Use this tool proactively when you're about to start a non-trivial implementation task. Getting user sign-off on your approach before writing code prevents wasted effort and ensures alignment. This tool transitions you into plan mode where you can explore the codebase and design an implementation approach for user approval.

#### When to Use This Tool

**Prefer using EnterPlanMode** for implementation tasks unless they're simple. Use it when ANY of these conditions apply:

1. **New Feature Implementation**: Adding meaningful new functionality
   - Example: "Add a logout button" - where should it go? What should happen on click?
   - Example: "Add form validation" - what rules? What error messages?

2. **Multiple Valid Approaches**: The task can be solved in several different ways
   - Example: "Add caching to the API" - could use Redis, in-memory, file-based, etc.
   - Example: "Improve performance" - many optimization strategies possible

3. **Code Modifications**: Changes that affect existing behavior or structure
   - Example: "Update the login flow" - what exactly should change?
   - Example: "Refactor this component" - what's the target architecture?

4. **Architectural Decisions**: The task requires choosing between patterns or technologies
   - Example: "Add real-time updates" - WebSockets vs SSE vs polling
   - Example: "Implement state management" - Redux vs Context vs custom solution

5. **Multi-File Changes**: The task will likely touch more than 2-3 files
   - Example: "Refactor the authentication system"
   - Example: "Add a new API endpoint with tests"

6. **Unclear Requirements**: You need to explore before understanding the full scope
   - Example: "Make the app faster" - need to profile and identify bottlenecks
   - Example: "Fix the bug in checkout" - need to investigate root cause

7. **User Preferences Matter**: The implementation could reasonably go multiple ways
   - If you would use AskUserQuestion to clarify the approach, use EnterPlanMode instead
   - Plan mode lets you explore first, then present options with context

#### When NOT to Use This Tool

Only skip EnterPlanMode for simple tasks:
- Single-line or few-line fixes (typos, obvious bugs, small tweaks)
- Adding a single function with clear requirements
- Tasks where the user has given very specific, detailed instructions
- Pure research/exploration tasks (use the Agent tool with explore agent instead)

#### Important Notes

- This tool REQUIRES user approval - they must consent to entering plan mode
- If unsure whether to use it, err on the side of planning - it's better to get alignment upfront than to redo work
- Users appreciate being consulted before significant changes are made to their codebase",
  "name": "EnterPlanMode",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {},
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: exit_plan_mode 1`] = `
{
  "description": "Finalizes the planning phase and transitions to implementation by presenting the plan for user approval. This tool MUST be used to exit Plan Mode before any source code edits can be performed. Call this whenever a plan is ready or the user requests implementation.",
  "name": "ExitPlanMode",
  "parametersJsonSchema": {
    "properties": {
      "plan_path": {
        "description": "The file path to the finalized plan (e.g., "/mock/plans/feature-x.md"). This path MUST be within the designated plans directory: /mock/plans/",
        "type": "string",
      },
    },
    "required": [
      "plan_path",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: glob 1`] = `
{
  "description": "- Fast file pattern matching tool that works with any codebase size
- Supports glob patterns like "**/*.js" or "src/**/*.ts"
- Returns matching file paths sorted by modification time
- Use this tool when you need to find files by name patterns
- When you are doing an open ended search that may require multiple rounds of globbing and grepping, use the Agent tool instead
- You can call multiple tools in a single response. It is always better to speculatively perform multiple searches in parallel if they are potentially useful.",
  "name": "Glob",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "path": {
        "description": "The directory to search in. If not specified, the current working directory will be used. IMPORTANT: Omit this field to use the default directory. DO NOT enter "undefined" or "null" - simply omit it for the default behavior. Must be a valid directory path if provided.",
        "type": "string",
      },
      "pattern": {
        "description": "The glob pattern to match files against",
        "type": "string",
      },
    },
    "required": [
      "pattern",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: google_web_search 1`] = `
{
  "description": "Allows Claude to search the web and use the results to inform responses. Provides up-to-date information for current events and recent data. Returns search result information formatted as search result blocks, including links as markdown hyperlinks.
CRITICAL REQUIREMENT - You MUST follow this:
- When answering the user's question, you MUST include a "Sources:" section at the end of your response
- In the Sources section, list all relevant URLs from the search results as markdown hyperlinks: [Title](URL)
- IMPORTANT: Never skip including sources in your response
Example format:
Your answer here

Sources:
- [Source Title 1](https://example.com/1)
- [Source Title 2](https://example.com/2)",
  "name": "WebSearch",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "allowed_domains": {
        "description": "Only include search results from these domains",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "blocked_domains": {
        "description": "Never include search results from these domains",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "query": {
        "description": "The search query to find information on the web. Must be at least 2 characters.",
        "minLength": 2,
        "type": "string",
      },
    },
    "required": [
      "query",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: grep_search 1`] = `
{
  "description": "A powerful search tool built on ripgrep

  Usage:
  - ALWAYS use Grep for search tasks. NEVER invoke \`grep\` or \`rg\` as a Bash command. The Grep tool has been optimized for correct permissions and access.
  - Supports full regex syntax (e.g., "log.*Error", "function\\s+\\w+")
  - Filter files with glob parameter (e.g., "*.js", "**/*.tsx") or type parameter (e.g., "js", "py", "rust")
  - Output modes: "content" shows matching lines, "files_with_matches" shows only file paths (default), "count" shows match counts
  - Use Agent tool for open-ended searches requiring multiple rounds
  - Pattern syntax: Uses ripgrep (not grep) - literal braces need escaping (use \`interface\\{\\}\` to find \`interface{}\` in Go code)
  - Multiline matching: By default patterns match within single lines only. For cross-line patterns like \`struct \\{[\\s\\S]*?field\`, use \`multiline: true\`",
  "name": "Grep",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "-A": {
        "description": "Number of lines to show after each match (rg -A). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "-B": {
        "description": "Number of lines to show before each match (rg -B). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "-i": {
        "description": "Case insensitive search (rg -i)",
        "type": "boolean",
      },
      "context": {
        "description": "Number of lines to show before and after each match (rg -C). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "glob": {
        "description": "Glob pattern to filter files (e.g. "*.js", "*.{ts,tsx}") - maps to rg --glob",
        "type": "string",
      },
      "head_limit": {
        "description": "Limit output to first N lines/entries, equivalent to "| head -N". Works across all output modes: content (limits output lines), files_with_matches (limits file paths), count (limits count entries). Defaults to 0 (unlimited).",
        "type": "number",
      },
      "multiline": {
        "description": "Enable multiline mode where . matches newlines and patterns can span lines (rg -U --multiline-dotall). Default: false.",
        "type": "boolean",
      },
      "offset": {
        "description": "Skip first N lines/entries before applying head_limit, equivalent to "| tail -n +N | head -N". Works across all output modes. Defaults to 0.",
        "type": "number",
      },
      "output_mode": {
        "description": "Output mode: "content" shows matching lines (supports -A/-B/-C context, -n line numbers, head_limit), "files_with_matches" shows file paths (supports head_limit), "count" shows match counts (supports head_limit). Defaults to "files_with_matches".",
        "enum": [
          "content",
          "files_with_matches",
          "count",
        ],
        "type": "string",
      },
      "path": {
        "description": "File or directory to search in (rg PATH). Defaults to current working directory.",
        "type": "string",
      },
      "pattern": {
        "description": "The regular expression pattern to search for in file contents",
        "type": "string",
      },
      "type": {
        "description": "File type to search (rg --type). Common types: js, py, rust, go, java, etc. More efficient than include for standard file types.",
        "type": "string",
      },
    },
    "required": [
      "pattern",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: grep_search_ripgrep 1`] = `
{
  "description": "A powerful search tool built on ripgrep

  Usage:
  - ALWAYS use Grep for search tasks. NEVER invoke \`grep\` or \`rg\` as a Bash command. The Grep tool has been optimized for correct permissions and access.
  - Supports full regex syntax (e.g., "log.*Error", "function\\s+\\w+")
  - Filter files with glob parameter (e.g., "*.js", "**/*.tsx") or type parameter (e.g., "js", "py", "rust")
  - Output modes: "content" shows matching lines, "files_with_matches" shows only file paths (default), "count" shows match counts
  - Use Agent tool for open-ended searches requiring multiple rounds
  - Pattern syntax: Uses ripgrep (not grep) - literal braces need escaping (use \`interface\\{\\}\` to find \`interface{}\` in Go code)
  - Multiline matching: By default patterns match within single lines only. For cross-line patterns like \`struct \\{[\\s\\S]*?field\`, use \`multiline: true\`",
  "name": "Grep",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "-A": {
        "description": "Number of lines to show after each match (rg -A). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "-B": {
        "description": "Number of lines to show before each match (rg -B). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "-i": {
        "description": "Case insensitive search (rg -i)",
        "type": "boolean",
      },
      "context": {
        "description": "Number of lines to show before and after each match (rg -C). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "glob": {
        "description": "Glob pattern to filter files (e.g. "*.js", "*.{ts,tsx}") - maps to rg --glob",
        "type": "string",
      },
      "head_limit": {
        "description": "Limit output to first N lines/entries, equivalent to "| head -N". Works across all output modes: content (limits output lines), files_with_matches (limits file paths), count (limits count entries). Defaults to 0 (unlimited).",
        "type": "number",
      },
      "multiline": {
        "description": "Enable multiline mode where . matches newlines and patterns can span lines (rg -U --multiline-dotall). Default: false.",
        "type": "boolean",
      },
      "offset": {
        "description": "Skip first N lines/entries before applying head_limit, equivalent to "| tail -n +N | head -N". Works across all output modes. Defaults to 0.",
        "type": "number",
      },
      "output_mode": {
        "description": "Output mode: "content" shows matching lines (supports -A/-B/-C context, -n line numbers, head_limit), "files_with_matches" shows file paths (supports head_limit), "count" shows match counts (supports head_limit). Defaults to "files_with_matches".",
        "enum": [
          "content",
          "files_with_matches",
          "count",
        ],
        "type": "string",
      },
      "path": {
        "description": "File or directory to search in (rg PATH). Defaults to current working directory.",
        "type": "string",
      },
      "pattern": {
        "description": "The regular expression pattern to search for in file contents",
        "type": "string",
      },
      "type": {
        "description": "File type to search (rg --type). Common types: js, py, rust, go, java, etc. More efficient than include for standard file types.",
        "type": "string",
      },
    },
    "required": [
      "pattern",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: read_file 1`] = `
{
  "description": "Reads a file from the local filesystem. You can access any file directly by using this tool.
Assume this tool is able to read all files on the machine. If the User provides a path to a file assume that path is valid. It is okay to read a file that does not exist; an error will be returned.

Usage:
- The file_path parameter must be an absolute path, not a relative path
- By default, it reads up to 2000 lines starting from the beginning of the file
- You can optionally specify a line offset and limit (especially handy for long files), but it's recommended to read the whole file by not providing these parameters
- Any lines longer than 2000 characters will be truncated
- Results are returned using cat -n format, with line numbers starting at 1
- This tool allows Claude Code to read images (eg PNG, JPG, etc). When reading an image file the contents are presented visually as Claude Code is a multimodal LLM.
- This tool can read PDF files (.pdf). For large PDFs (more than 10 pages), you MUST provide the pages parameter to read specific page ranges (e.g., pages: "1-5"). Reading a large PDF without the pages parameter will fail. Maximum 20 pages per request.
- This tool can read Jupyter notebooks (.ipynb files) and returns all cells with their outputs, combining code, text, and visualizations.
- This tool can only read files, not directories. To read a directory, use an ls command via the Bash tool.
- You can call multiple tools in a single response. It is always better to speculatively read multiple potentially useful files in parallel.
- You will regularly be asked to read screenshots. If the user provides a path to a screenshot, ALWAYS use this tool to view the file at the path. This tool will work with all temporary file paths.
- If you read a file that exists but has empty contents you will receive a system reminder warning in place of file contents.",
  "name": "Read",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "file_path": {
        "description": "The absolute path to the file to read",
        "type": "string",
      },
      "limit": {
        "description": "The number of lines to read. Equivalent to "limit".",
        "type": "number",
      },
      "offset": {
        "description": "The number of lines to skip before starting to read. Equivalent to "offset".",
        "type": "number",
      },
    },
    "required": [
      "file_path",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: replace 1`] = `
{
  "description": "Performs exact string replacements in files.

Usage:
- You must use your \`Read\` tool at least once in the conversation before editing. This tool will error if you attempt an edit without reading the file.
- When editing text from Read tool output, ensure you preserve the exact indentation (tabs/spaces) as it appears AFTER the line number prefix. The line number prefix format is: spaces + line number + tab. Everything after that tab is the actual file content to match. Never include any part of the line number prefix in the old_string or new_string.
- ALWAYS prefer editing existing files in the codebase. NEVER write new files unless explicitly required.
- Only use emojis if the user explicitly requests it. Avoid adding emojis to files unless asked.
- The edit will FAIL if \`old_string\` is not unique in the file. Either provide a larger string with more surrounding context to make it unique or use \`replace_all\` to change every instance of \`old_string\`.
- Use \`replace_all\` for replacing and renaming strings across the file. This parameter is useful if you want to rename a variable for instance.",
  "name": "Edit",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "file_path": {
        "description": "The absolute path to the file to modify",
        "type": "string",
      },
      "new_string": {
        "description": "The text to replace it with (must be different from old_string)",
        "type": "string",
      },
      "old_string": {
        "description": "The text to replace",
        "type": "string",
      },
      "replace_all": {
        "default": false,
        "description": "Replace all occurrences of old_string (default false)",
        "type": "boolean",
      },
    },
    "required": [
      "file_path",
      "old_string",
      "new_string",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: run_shell_command 1`] = `
{
  "description": "This tool executes a given shell command as \`bash -c <command>\`. To run a command in the background, set the \`run_in_background\` parameter to true. Do NOT use \`&\` to background commands. Command is executed as a subprocess that leads its own process group. Command process group can be terminated as \`kill -- -PGID\` or signaled as \`kill -s SIGNAL -- -PGID\`.

      Efficiency Guidelines:
      - Quiet Flags: Always prefer silent or quiet flags (e.g., \`npm install --silent\`, \`git --no-pager\`) to reduce output volume while still capturing necessary information.
      - Pagination: Always disable terminal pagination to ensure commands terminate (e.g., use \`git --no-pager\`, \`systemctl --no-pager\`, or set \`PAGER=cat\`).

      The following information is returned:

      Output: Combined stdout/stderr. Can be \`(empty)\` or partial on error and for any unwaited background processes.
      Exit Code: Only included if non-zero (command failed).
      Error: Only included if a process-level error occurred (e.g., spawn failure).
      Signal: Only included if process was terminated by a signal.
      Background PIDs: Only included if background processes were started.
      Process Group PGID: Only included if available.",
  "name": "Bash",
  "parametersJsonSchema": {
    "properties": {
      "command": {
        "description": "Exact bash command to execute as \`bash -c <command>\`",
        "type": "string",
      },
      "description": {
        "description": "Brief description of the command for the user. Be specific and concise. Ideally a single sentence. Can be up to 3 sentences for clarity. No line breaks.",
        "type": "string",
      },
      "path": {
        "description": "(OPTIONAL) The path of the directory to run the command in. If not provided, the project root directory is used. Must be a directory within the workspace and must already exist.",
        "type": "string",
      },
      "run_in_background": {
        "description": "Set to true if this command should be run in the background (e.g. for long-running servers or watchers). The command will be started, allowed to run for a brief moment to check for immediate errors, and then moved to the background.",
        "type": "boolean",
      },
    },
    "required": [
      "command",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: web_fetch 1`] = `
{
  "description": "Fetches content from a specified URL and processes it using an AI model. Takes a URL and a prompt as input, fetches the URL content, converts HTML to markdown, and processes the content with the prompt using a small, fast model. Returns the model's response about the content.
CRITICAL REQUIREMENT - You MUST follow this:
- Only include "Sources:" section if using WebSearch tool too
- This tool WILL FAIL for authenticated or private URLs. Before using this tool, check if the URL points to an authenticated service (e.g., Google Docs, Confluence, Jira, GitHub). If so, look for a specialized MCP tool that provides authenticated access.
- You may use WebFetch for URLs provided by the user in their messages or local files.",
  "name": "WebFetch",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "oneOf": [
      {
        "required": [
          "url",
        ],
      },
      {
        "required": [
          "prompt",
        ],
      },
    ],
    "properties": {
      "prompt": {
        "description": "The prompt to run on the fetched content. Can contain up to 20 URLs.",
        "type": "string",
      },
      "url": {
        "description": "The URL to fetch content from",
        "format": "uri",
        "type": "string",
      },
    },
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: write_file 1`] = `
{
  "description": "Writes a file to the local filesystem.

Usage:
- This tool will overwrite the existing file if there is one at the provided path.
- If this is an existing file, you MUST use the Read tool first to read the file. This tool will fail if you did not read the file first.
- Prefer the Edit tool for modifying existing files — it's safer and more reliable.
- NEVER create documentation files (*.md) or README files unless explicitly requested by the User.
- Only use emojis if the user explicitly requests it. Avoid adding emojis to files unless asked.",
  "name": "Write",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "ai_proposed_content": {
        "description": "Internal: The originally proposed content before user modification.",
        "type": "string",
      },
      "content": {
        "description": "The content to write to the file. Do not use omission placeholders like '(rest of methods ...)', '...', or 'unchanged code'; provide complete literal content.",
        "type": "string",
      },
      "file_path": {
        "description": "The absolute path to the file to write (must be absolute, not relative)",
        "type": "string",
      },
      "modified_by_user": {
        "description": "Internal: Whether the content was modified by the user.",
        "type": "boolean",
      },
    },
    "required": [
      "file_path",
      "content",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-2.5-pro > snapshot for tool: write_todos 1`] = `
{
  "description": "Use this tool to create a structured task list for your current coding session. This helps you track progress, organize complex tasks, and demonstrate thoroughness to the user.
It also helps the user understand the progress of the task and overall progress of their requests.

## When to Use This Tool

Use this tool proactively in these scenarios:

- Complex multi-step tasks - When a task requires 3 or more distinct steps or actions
- Non-trivial and complex tasks - Tasks that require careful planning or multiple operations
- Plan mode - When using plan mode, create a task list to track the work
- User explicitly requests todo list - When the user directly asks you to use the todo list
- User provides multiple tasks - When users provide a list of things to be done (numbered or comma-separated)

When receiving new instructions, immediately capture user requirements as tasks. When starting work on a task, mark it as in_progress BEFORE beginning work. After completing a task, mark it as completed and add any new follow-up tasks discovered during implementation.

## When NOT to Use This Tool

Skip using this tool when:
- There is only a single, straightforward task
- The task is trivial and tracking it provides no organizational benefit
- The task can be completed in less than 3 trivial steps
- The task is purely conversational or informational

NOTE that you should not use this tool if there is only one trivial task to do. Ask yourself: "Will tracking this help the user understand progress?"

## Task Fields

- **subject**: A brief, actionable title in imperative form (e.g., "Fix authentication bug in login flow")
- **description**: Detailed description of what needs to be done, including context and acceptance criteria
- **activeForm** (optional): Present continuous form shown in the spinner when in_progress (e.g., "Fixing authentication bug"). If omitted, the spinner shows the content instead.

All tasks are created with status \`pending\`.",
  "name": "TodoWrite",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "todos": {
        "description": "The complete list of todo items. This will replace the existing list.",
        "items": {
          "additionalProperties": false,
          "description": "A single todo item.",
          "properties": {
            "activeForm": {
              "description": "Present continuous form shown in spinner when in_progress",
              "minLength": 1,
              "type": "string",
            },
            "content": {
              "description": "The imperative form describing what needs to be done",
              "minLength": 1,
              "type": "string",
            },
            "status": {
              "description": "The current status of the task.",
              "enum": [
                "pending",
                "in_progress",
                "completed",
              ],
              "type": "string",
            },
          },
          "required": [
            "content",
            "status",
            "activeForm",
          ],
          "type": "object",
        },
        "type": "array",
      },
    },
    "required": [
      "todos",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: activate_skill 1`] = `
{
  "description": "Activates a specialized agent skill by name (Available: 'skill1', 'skill2'). Returns the skill's instructions wrapped in \`<activated_skill>\` tags. These provide specialized guidance for the current task. Use this when you identify a task that matches a skill's description. ONLY use names exactly as they appear in the \`<available_skills>\` section.",
  "name": "Skill",
  "parametersJsonSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "skill": {
        "description": "The name of the skill to activate.",
        "enum": [
          "skill1",
          "skill2",
        ],
        "type": "string",
      },
    },
    "required": [
      "skill",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: activate_skill_empty 1`] = `
{
  "description": "Activates a specialized agent skill by name. Returns the skill's instructions wrapped in \`<activated_skill>\` tags. These provide specialized guidance for the current task. Use this when you identify a task that matches a skill's description. ONLY use names exactly as they appear in the \`<available_skills>\` section.",
  "name": "Skill",
  "parametersJsonSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "skill": {
        "description": "No skills are currently available.",
        "type": "string",
      },
    },
    "required": [
      "skill",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: activate_skill_single 1`] = `
{
  "description": "Activates a specialized agent skill by name (Available: 'skill1'). Returns the skill's instructions wrapped in \`<activated_skill>\` tags. These provide specialized guidance for the current task. Use this when you identify a task that matches a skill's description. ONLY use names exactly as they appear in the \`<available_skills>\` section.",
  "name": "Skill",
  "parametersJsonSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "skill": {
        "description": "The name of the skill to activate.",
        "enum": [
          "skill1",
        ],
        "type": "string",
      },
    },
    "required": [
      "skill",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: ask_user 1`] = `
{
  "description": "Use this tool when you need to ask the user questions during execution. This allows you to:
1. Gather user preferences or requirements
2. Clarify ambiguous instructions
3. Get decisions on implementation choices as you work
4. Offer choices to the user about what direction to take.

Usage notes:
- Users will always be able to select "Other" to provide custom text input
- Use multiSelect: true to allow multiple answers to be selected for a question
- If you recommend a specific option, make that the first option in the list and add "(Recommended)" at the end of the label

Plan mode note: In plan mode, use this tool to clarify requirements or choose between approaches BEFORE finalizing your plan. Do NOT use this tool to ask "Is my plan ready?" or "Should I proceed?" - use ExitPlanMode for plan approval.",
  "name": "AskUserQuestion",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "questions": {
        "description": "Questions to ask the user (1-4 questions)",
        "items": {
          "additionalProperties": false,
          "properties": {
            "header": {
              "description": "Very short label displayed as a chip/tag (max 12 chars). Examples: "Auth method", "Library", "Approach".",
              "type": "string",
            },
            "multiSelect": {
              "default": false,
              "description": "Set to true to allow the user to select multiple options instead of just one.",
              "type": "boolean",
            },
            "options": {
              "description": "The available choices for this question. Must have 2-4 options.",
              "items": {
                "additionalProperties": false,
                "properties": {
                  "description": {
                    "description": "Explanation of what this option means or what will happen if chosen.",
                    "type": "string",
                  },
                  "label": {
                    "description": "The display text for this option that the user will see and select.",
                    "type": "string",
                  },
                  "preview": {
                    "description": "Optional preview content shown in a monospace box when this option is focused.",
                    "type": "string",
                  },
                },
                "required": [
                  "label",
                  "description",
                ],
                "type": "object",
              },
              "maxItems": 4,
              "minItems": 2,
              "type": "array",
            },
            "question": {
              "description": "The complete question to ask the user. Should be clear, specific, and end with a question mark.",
              "type": "string",
            },
          },
          "required": [
            "question",
            "header",
            "options",
            "multiSelect",
          ],
          "type": "object",
        },
        "maxItems": 4,
        "minItems": 1,
        "type": "array",
      },
    },
    "required": [
      "questions",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: enter_plan_mode 1`] = `
{
  "description": "Use this tool proactively when you're about to start a non-trivial implementation task. Getting user sign-off on your approach before writing code prevents wasted effort and ensures alignment. This tool transitions you into plan mode where you can explore the codebase and design an implementation approach for user approval.

#### When to Use This Tool

**Prefer using EnterPlanMode** for implementation tasks unless they're simple. Use it when ANY of these conditions apply:

1. **New Feature Implementation**: Adding meaningful new functionality
2. **Multiple Valid Approaches**: The task can be solved in several different ways
3. **Code Modifications**: Changes that affect existing behavior or structure
4. **Architectural Decisions**: The task requires choosing between patterns or technologies
5. **Multi-File Changes**: The task will likely touch more than 2-3 files
6. **Unclear Requirements**: You need to explore before understanding the full scope
7. **User Preferences Matter**: The implementation could reasonably go multiple ways

#### When NOT to Use This Tool

Only skip EnterPlanMode for simple tasks:
- Single-line or few-line fixes (typos, obvious bugs, small tweaks)
- Adding a single function with clear requirements
- Tasks where the user has given very specific, detailed instructions
- Pure research/exploration tasks (use the Agent tool with explore agent instead)

#### Important Notes

- This tool REQUIRES user approval - they must consent to entering plan mode
- If unsure whether to use it, err on the side of planning - it's better to get alignment upfront than to redo work
- Users appreciate being consulted before significant changes are made to their codebase",
  "name": "EnterPlanMode",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {},
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: exit_plan_mode 1`] = `
{
  "description": "Finalizes the planning phase and transitions to implementation by presenting the plan for user approval. This tool MUST be used to exit Plan Mode before any source code edits can be performed. Call this whenever a plan is ready or the user requests implementation.",
  "name": "ExitPlanMode",
  "parametersJsonSchema": {
    "properties": {
      "plan_path": {
        "description": "The file path to the finalized plan (e.g., "/mock/plans/feature-x.md"). This path MUST be within the designated plans directory: /mock/plans/",
        "type": "string",
      },
    },
    "required": [
      "plan_path",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: glob 1`] = `
{
  "description": "- Fast file pattern matching tool that works with any codebase size
- Supports glob patterns like "**/*.js" or "src/**/*.ts"
- Returns matching file paths sorted by modification time
- Use this tool when you need to find files by name patterns
- When you are doing an open ended search that may require multiple rounds of globbing and grepping, use the Agent tool instead
- You can call multiple tools in a single response. It is always better to speculatively perform multiple searches in parallel if they are potentially useful.",
  "name": "Glob",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "path": {
        "description": "The directory to search in. If not specified, the current working directory will be used. IMPORTANT: Omit this field to use the default directory. DO NOT enter "undefined" or "null" - simply omit it for the default behavior. Must be a valid directory path if provided.",
        "type": "string",
      },
      "pattern": {
        "description": "The glob pattern to match files against",
        "type": "string",
      },
    },
    "required": [
      "pattern",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: google_web_search 1`] = `
{
  "description": "Allows Claude to search the web and use the results to inform responses. Provides up-to-date information for current events and recent data. Returns search result information formatted as search result blocks, including links as markdown hyperlinks.
CRITICAL REQUIREMENT - You MUST follow this:
- When answering the user's question, you MUST include a "Sources:" section at the end of your response
- In the Sources section, list all relevant URLs from the search results as markdown hyperlinks: [Title](URL)
- IMPORTANT: Never skip including sources in your response",
  "name": "WebSearch",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "allowed_domains": {
        "description": "Only include search results from these domains",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "blocked_domains": {
        "description": "Never include search results from these domains",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "query": {
        "description": "The search query to find information on the web. Must be at least 2 characters.",
        "minLength": 2,
        "type": "string",
      },
    },
    "required": [
      "query",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: grep_search 1`] = `
{
  "description": "A powerful search tool built on ripgrep

  Usage:
  - ALWAYS use Grep for search tasks. NEVER invoke \`grep\` or \`rg\` as a Bash command. The Grep tool has been optimized for correct permissions and access.
  - Supports full regex syntax (e.g., "log.*Error", "function\\s+\\w+")
  - Filter files with glob parameter (e.g., "*.js", "**/*.tsx") or type parameter (e.g., "js", "py", "rust")
  - Output modes: "content" shows matching lines, "files_with_matches" shows only file paths (default), "count" shows match counts
  - Use Agent tool for open-ended searches requiring multiple rounds
  - Pattern syntax: Uses ripgrep (not grep) - literal braces need escaping (use \`interface\\{\\}\` to find \`interface{}\` in Go code)
  - Multiline matching: By default patterns match within single lines only. For cross-line patterns like \`struct \\{[\\s\\S]*?field\`, use \`multiline: true\`",
  "name": "Grep",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "-A": {
        "description": "Number of lines to show after each match (rg -A). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "-B": {
        "description": "Number of lines to show before each match (rg -B). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "-i": {
        "description": "Case insensitive search (rg -i)",
        "type": "boolean",
      },
      "context": {
        "description": "Number of lines to show before and after each match (rg -C). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "glob": {
        "description": "Glob pattern to filter files (e.g. "*.js", "*.{ts,tsx}") - maps to rg --glob",
        "type": "string",
      },
      "head_limit": {
        "description": "Limit output to first N lines/entries, equivalent to "| head -N". Works across all output modes: content (limits output lines), files_with_matches (limits file paths), count (limits count entries). Defaults to 0 (unlimited).",
        "type": "number",
      },
      "multiline": {
        "description": "Enable multiline mode where . matches newlines and patterns can span lines (rg -U --multiline-dotall). Default: false.",
        "type": "boolean",
      },
      "offset": {
        "description": "Skip first N lines/entries before applying head_limit, equivalent to "| tail -n +N | head -N". Works across all output modes. Defaults to 0.",
        "type": "number",
      },
      "output_mode": {
        "description": "Output mode: "content" shows matching lines (supports -A/-B/-C context, -n line numbers, head_limit), "files_with_matches" shows file paths (supports head_limit), "count" shows match counts (supports head_limit). Defaults to "files_with_matches".",
        "enum": [
          "content",
          "files_with_matches",
          "count",
        ],
        "type": "string",
      },
      "path": {
        "description": "File or directory to search in (rg PATH). Defaults to current working directory.",
        "type": "string",
      },
      "pattern": {
        "description": "The regular expression pattern to search for in file contents",
        "type": "string",
      },
      "type": {
        "description": "File type to search (rg --type). Common types: js, py, rust, go, java, etc. More efficient than include for standard file types.",
        "type": "string",
      },
    },
    "required": [
      "pattern",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: grep_search_ripgrep 1`] = `
{
  "description": "A powerful search tool built on ripgrep

  Usage:
  - ALWAYS use Grep for search tasks. NEVER invoke \`grep\` or \`rg\` as a Bash command. The Grep tool has been optimized for correct permissions and access.
  - Supports full regex syntax (e.g., "log.*Error", "function\\s+\\w+")
  - Filter files with glob parameter (e.g., "*.js", "**/*.tsx") or type parameter (e.g., "js", "py", "rust")
  - Output modes: "content" shows matching lines, "files_with_matches" shows only file paths (default), "count" shows match counts
  - Use Agent tool for open-ended searches requiring multiple rounds
  - Pattern syntax: Uses ripgrep (not grep) - literal braces need escaping (use \`interface\\{\\}\` to find \`interface{}\` in Go code)
  - Multiline matching: By default patterns match within single lines only. For cross-line patterns like \`struct \\{[\\s\\S]*?field\`, use \`multiline: true\`",
  "name": "Grep",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "-A": {
        "description": "Number of lines to show after each match (rg -A). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "-B": {
        "description": "Number of lines to show before each match (rg -B). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "-i": {
        "description": "Case insensitive search (rg -i)",
        "type": "boolean",
      },
      "context": {
        "description": "Number of lines to show before and after each match (rg -C). Requires output_mode: "content", ignored otherwise.",
        "type": "number",
      },
      "glob": {
        "description": "Glob pattern to filter files (e.g. "*.js", "*.{ts,tsx}") - maps to rg --glob",
        "type": "string",
      },
      "head_limit": {
        "description": "Limit output to first N lines/entries, equivalent to "| head -N". Works across all output modes: content (limits output lines), files_with_matches (limits file paths), count (limits count entries). Defaults to 0 (unlimited).",
        "type": "number",
      },
      "multiline": {
        "description": "Enable multiline mode where . matches newlines and patterns can span lines (rg -U --multiline-dotall). Default: false.",
        "type": "boolean",
      },
      "offset": {
        "description": "Skip first N lines/entries before applying head_limit, equivalent to "| tail -n +N | head -N". Works across all output modes. Defaults to 0.",
        "type": "number",
      },
      "output_mode": {
        "description": "Output mode: "content" shows matching lines (supports -A/-B/-C context, -n line numbers, head_limit), "files_with_matches" shows file paths (supports head_limit), "count" shows match counts (supports head_limit). Defaults to "files_with_matches".",
        "enum": [
          "content",
          "files_with_matches",
          "count",
        ],
        "type": "string",
      },
      "path": {
        "description": "File or directory to search in (rg PATH). Defaults to current working directory.",
        "type": "string",
      },
      "pattern": {
        "description": "The regular expression pattern to search for in file contents",
        "type": "string",
      },
      "type": {
        "description": "File type to search (rg --type). Common types: js, py, rust, go, java, etc. More efficient than include for standard file types.",
        "type": "string",
      },
    },
    "required": [
      "pattern",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: read_file 1`] = `
{
  "description": "Reads a file from the local filesystem. You can access any file directly by using this tool.
Assume this tool is able to read all files on the machine. If the User provides a path to a file assume that path is valid. It is okay to read a file that does not exist; an error will be returned.

Usage:
- The file_path parameter must be an absolute path, not a relative path
- By default, it reads up to 2000 lines starting from the beginning of the file
- You can optionally specify a line offset and limit (especially handy for long files), but it's recommended to read the whole file by not providing these parameters
- Any lines longer than 2000 characters will be truncated
- Results are returned using cat -n format, with line numbers starting at 1
- This tool allows Claude Code to read images (eg PNG, JPG, etc). When reading an image file the contents are presented visually as Claude Code is a multimodal LLM.
- This tool can read PDF files (.pdf). For large PDFs (more than 10 pages), you MUST provide the pages parameter to read specific page ranges (e.g., pages: "1-5"). Reading a large PDF without the pages parameter will fail. Maximum 20 pages per request.
- This tool can read Jupyter notebooks (.ipynb files) and returns all cells with their outputs, combining code, text, and visualizations.
- This tool can only read files, not directories. To read a directory, use an ls command via the Bash tool.
- You can call multiple tools in a single response. It is always better to speculatively read multiple potentially useful files in parallel.
- You will regularly be asked to read screenshots. If the user provides a path to a screenshot, ALWAYS use this tool to view the file at the path. This tool will work with all temporary file paths.
- If you read a file that exists but has empty contents you will receive a system reminder warning in place of file contents.",
  "name": "Read",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "file_path": {
        "description": "The absolute path to the file to read",
        "type": "string",
      },
      "limit": {
        "description": "The number of lines to read. Equivalent to "limit".",
        "type": "number",
      },
      "offset": {
        "description": "The number of lines to skip before starting to read. Equivalent to "offset".",
        "type": "number",
      },
    },
    "required": [
      "file_path",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: replace 1`] = `
{
  "description": "Performs exact string replacements in files.

Usage:
- You must use your \`Read\` tool at least once in the conversation before editing. This tool will error if you attempt an edit without reading the file.
- When editing text from Read tool output, ensure you preserve the exact indentation (tabs/spaces) as it appears AFTER the line number prefix. The line number prefix format is: spaces + line number + tab. Everything after that tab is the actual file content to match. Never include any part of the line number prefix in the old_string or new_string.
- ALWAYS prefer editing existing files in the codebase. NEVER write new files unless explicitly required.
- Only use emojis if the user explicitly requests it. Avoid adding emojis to files unless asked.
- The edit will FAIL if \`old_string\` is not unique in the file. Either provide a larger string with more surrounding context to make it unique or use \`replace_all\` to change every instance of \`old_string\`.
- Use \`replace_all\` for replacing and renaming strings across the file. This parameter is useful if you want to rename a variable for instance.",
  "name": "Edit",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "file_path": {
        "description": "The absolute path to the file to modify",
        "type": "string",
      },
      "new_string": {
        "description": "The text to replace it with (must be different from old_string)",
        "type": "string",
      },
      "old_string": {
        "description": "The text to replace",
        "type": "string",
      },
      "replace_all": {
        "default": false,
        "description": "Replace all occurrences of old_string (default false)",
        "type": "boolean",
      },
    },
    "required": [
      "file_path",
      "old_string",
      "new_string",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: run_shell_command 1`] = `
{
  "description": "This tool executes a given shell command as \`bash -c <command>\`. To run a command in the background, set the \`run_in_background\` parameter to true. Do NOT use \`&\` to background commands. Command is executed as a subprocess that leads its own process group. Command process group can be terminated as \`kill -- -PGID\` or signaled as \`kill -s SIGNAL -- -PGID\`.

      Efficiency Guidelines:
      - Quiet Flags: Always prefer silent or quiet flags (e.g., \`npm install --silent\`, \`git --no-pager\`) to reduce output volume while still capturing necessary information.
      - Pagination: Always disable terminal pagination to ensure commands terminate (e.g., use \`git --no-pager\`, \`systemctl --no-pager\`, or set \`PAGER=cat\`).

      The following information is returned:

      Output: Combined stdout/stderr. Can be \`(empty)\` or partial on error and for any unwaited background processes.
      Exit Code: Only included if non-zero (command failed).
      Error: Only included if a process-level error occurred (e.g., spawn failure).
      Signal: Only included if process was terminated by a signal.
      Background PIDs: Only included if background processes were started.
      Process Group PGID: Only included if available.",
  "name": "Bash",
  "parametersJsonSchema": {
    "properties": {
      "command": {
        "description": "Exact bash command to execute as \`bash -c <command>\`",
        "type": "string",
      },
      "description": {
        "description": "Brief description of the command for the user. Be specific and concise. Ideally a single sentence. Can be up to 3 sentences for clarity. No line breaks.",
        "type": "string",
      },
      "path": {
        "description": "(OPTIONAL) The path of the directory to run the command in. If not provided, the project root directory is used. Must be a directory within the workspace and must already exist.",
        "type": "string",
      },
      "run_in_background": {
        "description": "Set to true if this command should be run in the background (e.g. for long-running servers or watchers). The command will be started, allowed to run for a brief moment to check for immediate errors, and then moved to the background.",
        "type": "boolean",
      },
    },
    "required": [
      "command",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: web_fetch 1`] = `
{
  "description": "Fetches content from a specified URL and processes it using an AI model. Takes a URL and a prompt as input, fetches the URL content, converts HTML to markdown, and processes the content with the prompt using a small, fast model. Returns the model's response about the content.
CRITICAL REQUIREMENT - You MUST follow this:
- Only include "Sources:" section if using WebSearch tool too
- This tool WILL FAIL for authenticated or private URLs. Before using this tool, check if the URL points to an authenticated service (e.g., Google Docs, Confluence, Jira, GitHub). If so, look for a specialized MCP tool that provides authenticated access.",
  "name": "WebFetch",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "oneOf": [
      {
        "required": [
          "url",
        ],
      },
      {
        "required": [
          "prompt",
        ],
      },
    ],
    "properties": {
      "prompt": {
        "description": "The prompt to run on the fetched content. Can contain up to 20 URLs.",
        "type": "string",
      },
      "url": {
        "description": "The URL to fetch content from",
        "format": "uri",
        "type": "string",
      },
    },
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: write_file 1`] = `
{
  "description": "Writes a file to the local filesystem.

Usage:
- This tool will overwrite the existing file if there is one at the provided path.
- If this is an existing file, you MUST use the Read tool first to read the file. This tool will fail if you did not read the file first.
- Prefer the Edit tool for modifying existing files — it's safer and more reliable.
- NEVER create documentation files (*.md) or README files unless explicitly requested by the User.
- Only use emojis if the user explicitly requests it. Avoid adding emojis to files unless asked.",
  "name": "Write",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "ai_proposed_content": {
        "description": "Internal: The originally proposed content before user modification.",
        "type": "string",
      },
      "content": {
        "description": "The content to write to the file. Do not use omission placeholders like '(rest of methods ...)', '...', or 'unchanged code'; provide complete literal content.",
        "type": "string",
      },
      "file_path": {
        "description": "The absolute path to the file to write (must be absolute, not relative)",
        "type": "string",
      },
      "modified_by_user": {
        "description": "Internal: Whether the content was modified by the user.",
        "type": "boolean",
      },
    },
    "required": [
      "file_path",
      "content",
    ],
    "type": "object",
  },
}
`;

exports[`coreTools snapshots for specific models > Model: gemini-3-pro-preview > snapshot for tool: write_todos 1`] = `
{
  "description": "Use this tool to create a structured task list for your current coding session. This helps you track progress, organize complex tasks, and demonstrate thoroughness to the user.

## When to Use This Tool

Use this tool proactively in these scenarios:

- Complex multi-step tasks - When a task requires 3 or more distinct steps or actions
- Non-trivial and complex tasks - Tasks that require careful planning or multiple operations
- Plan mode - When using plan mode, create a task list to track the work
- User explicitly requests todo list - When the user directly asks you to use the todo list
- User provides multiple tasks - When users provide a list of things to be done (numbered or comma-separated)

## When NOT to Use This Tool

Skip using this tool when:
- There is only a single, straightforward task
- The task is trivial and tracking it provides no organizational benefit
- The task can be completed in less than 3 trivial steps

## Task Fields

- **content**: The imperative form describing what needs to be done (e.g., "Fix authentication bug")
- **activeForm**: Present continuous form shown in the spinner when in_progress (e.g., "Fixing authentication bug")

All tasks are created with status \`pending\`.",
  "name": "TodoWrite",
  "parametersJsonSchema": {
    "additionalProperties": false,
    "properties": {
      "todos": {
        "description": "The complete list of todo items. This will replace the existing list.",
        "items": {
          "additionalProperties": false,
          "description": "A single todo item.",
          "properties": {
            "activeForm": {
              "description": "Present continuous form shown in spinner when in_progress",
              "minLength": 1,
              "type": "string",
            },
            "content": {
              "description": "The imperative form describing what needs to be done",
              "minLength": 1,
              "type": "string",
            },
            "status": {
              "description": "The current status of the task.",
              "enum": [
                "pending",
                "in_progress",
                "completed",
              ],
              "type": "string",
            },
          },
          "required": [
            "content",
            "status",
            "activeForm",
          ],
          "type": "object",
        },
        "type": "array",
      },
    },
    "required": [
      "todos",
    ],
    "type": "object",
  },
}
`;
